--- a/services/deviceRegistry/pom.xml
+++ b/services/deviceRegistry/pom.xml
@@ -50,6 +50,22 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>bulma</artifactId>
+			<version>0.9.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>4.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>timeago.js</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.commonmark</groupId>
 			<artifactId>commonmark</artifactId>
 			<version>0.18.2</version>
