--- a/services/deviceRegistry/src/main/resources/application.properties
+++ b/services/deviceRegistry/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 
 management.endpoint.health.show-details=always
+
+spring.datasource.url=jdbc:h2:mem:registry
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
