--- a/services/deviceRegistry/src/main/resources/application.properties
+++ b/services/deviceRegistry/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-
 management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:h2:mem:registry
 spring.datasource.driverClassName=org.h2.Driver
